--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.5.5",
     "prisma": "^6.17.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^6.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
