--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "leaflet": "^1.9.4",
     "next": "15.5.5",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "resend": "^6.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.21",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9",
-    "eslint-config-next": "15.5.5"
+    "eslint-config-next": "15.5.5",
+    "supabase": "^2.54.11"
   }
 }
