--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.17.1",
     "@supabase/supabase-js": "^2.45.1",
     "formidable": "^3.5.1",
+    "googleapis": "^166.0.0",
     "leaflet": "^1.9.4",
     "next": "15.5.5",
     "prisma": "^6.17.1",
